# serializer version: 1
# name: test_sensors[sensor.schwechat_active_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_active_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active warnings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active warnings',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_warnings',
    'unique_id': '30740-active_warnings',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_active_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Schwechat Active warnings',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_active_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Warning level',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'warning_level',
    'unique_id': '30740-warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Schwechat Warning level',
      'options': list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'orange',
  })
# ---
